# website

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  flake.nix  justfile
.github/workflows/: build_test.yml  check-flake-lock.yml  preview.yaml
infra/: .terraform.lock.hcl  README.md  configuration.nix  flake.nix  justfile  main.tf  secrets.enc.json  secrets.json.enc
pr-preview/pr-10/: 404.html  atom.xml  index.html  robots.txt  search_index.en.js  sitemap.xml
pr-preview/pr-11/: 404.html  atom.xml  index.html  robots.txt  search_index.en.js  sitemap.xml
pr-preview/pr-12/: 404.html  atom.xml  index.html  robots.txt  search_index.en.js  sitemap.xml
pr-preview/pr-13/: 404.html  atom.xml  index.html  robots.txt  search_index.en.js  sitemap.xml
pr-preview/pr-14/: 404.html  atom.xml  index.html  robots.txt  search_index.en.js  sitemap.xml
pr-preview/pr-15/: 404.html  atom.xml  index.html  robots.txt  search_index.en.js  sitemap.xml
pr-preview/pr-16/: 404.html  atom.xml  index.html  robots.txt  search_index.en.js  (+1 more)
pr-preview/pr-23/blog/cracking-python-monorepo/uv-dagger-dream/: pyproject.toml
pr-preview/pr-23/blog/cracking-python-monorepo/uv-dagger-dream/.dagger/: dagger.json  pyproject.toml
pr-preview/pr-23/blog/cracking-python-monorepo/uv-dagger-dream/.dagger/src/monorepo_dagger/: main.py
www/: README.md  config.toml  flake.nix  shell.nix
www/content/blog/cracking-python-monorepo/uv-dagger-dream/weird-location/nested/lib-three/: pyproject.toml
www/content/blog/cracking-the-python-monorepo/uv-dagger-dream/projects/lib-two/: pyproject.toml
(+1294 files in other folders)
