[project]
name = "uv-dagger-dream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.394",
    "ruff>=0.9.7",
]
dagger = [
    "monorepo-dagger",
]

[tool.uv.workspace]
members = ["projects/lib-one", "projects/lib-two"]

[tool.uv.sources]
monorepo-dagger = { path = ".dagger" }
